# funny_crystal_hasher

./: Cargo.toml  README.md  shell.nix
benches/: hash.rs
src/: lib.rs  main.rs
